--- a/src/main/resources/assets/heavensmod/lang/en_us.json
+++ b/src/main/resources/assets/heavensmod/lang/en_us.json
@@ -1,5 +1,9 @@
 {
   "item.heavensmod.dagger": "Dagger",
   "item.heavensmod.janedoe": "Jane Doe",
-  "item.heavensmod.job_application": "Job Application"
+  "item.heavensmod.job_application": "Job Application",
+  "item.heavensmod.paper": "Paper Sheet",
+
+  "block.heavensmod.jobapp_block": "Job Application Cube",
+  "block.heavensmod.paper_block": "Photorealistic Paper"
 }
