--- a/src/main/resources/assets/heavensmod/lang/en_us.json
+++ b/src/main/resources/assets/heavensmod/lang/en_us.json
@@ -6,6 +6,7 @@
 
   "block.heavensmod.jobapp_block": "Job Application Cube",
   "block.heavensmod.paper_block": "Photorealistic Paper",
+  "block.heavensmod.job_ore": "Job Application Ore",
 
   "creativetab.heavensmod.heavens_blocks": "Heaven's Blocks",
   "creativetab.heavensmod.heavens_items": "Heaven's Items"
