idk doesnt work exactly but ok

--- a/src/main/resources/assets/heavensmod/lang/en_us.json
+++ b/src/main/resources/assets/heavensmod/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.heavensmod.janedoe": "Jane Doe",
   "item.heavensmod.job_application": "Job Application",
   "item.heavensmod.paper": "Paper Sheet",
+  "item.heavensmod.the_jobber": "Job Applicator",
 
   "block.heavensmod.jobapp_block": "Job Application Cube",
   "block.heavensmod.paper_block": "Photorealistic Paper",
