--- a/src/main/resources/assets/heavensmod/lang/en_us.json
+++ b/src/main/resources/assets/heavensmod/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.heavensmod.job_application": "Job Application",
   "item.heavensmod.paper": "Paper Sheet",
   "item.heavensmod.the_jobber": "Job Applicator",
+  "item.heavensmod.nibble_ultra": "Rat Dagger",
 
   "block.heavensmod.jobapp_block": "Job Application Cube",
   "block.heavensmod.paper_block": "Photorealistic Paper",
